<resources>
    <string name="app_name">FuzzyContApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="again_password">Confirm password</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="logout">Выход</string>
    <string name="code">Код подтверждения</string>
    <string name="ok">ОК</string>
    <string name="rules">Правила</string>
    <string name="email">E-mail</string>
    <string name="theory">Теория</string>
    <string name="read">Читать</string>
    <string name="categories">Категории</string>
    <string name="home">Дом</string>
    <string name="my_rules">Мои правила</string>
    <string name="profile">Профиль</string>
    <string-array name="names">
        <item>Акселерометр</item>
        <item>Оптимизация</item>
        <item>Физ. модель</item>
        <item>Мат. модель</item>
    </string-array>
    <string name="slogan">Про нечеткую логику на примере\nмаятника Максвелла</string>
    <string name="saved_rules">Сохраненные правила</string>
    <string name="forgot">Забыли пароль?</string>
    <string name="enter_login">Введите ваш логин</string>
    <string name="not_found">Пользователь не найден</string>
    <string name="save">Сохранить</string>
    <string name="settings">Настройки</string>
    <string name="sensitivity">Чувствительность</string>
    <string name="mass">Масса</string>
    <string name="bottom_border">Нижняя граница</string>
    <string name="top_border">Верхняя граница</string>
    <string name="save_to_camera_roll">Сохранить в галерею</string>
    <string name="saved">Оптимизация началась…</string>
    <string name="optimization">Оптимизация</string>
    <string name="accelerometer">Акселерометер</string>
    <string name="maths_model">Математическая модель</string>
    <string name="physics_model">Физическая модель</string>
    <string name="charts_saved">Графики сохранены!</string>
    <string name="start">Старт</string>
    <string name="up">ВВЕРХ</string>
    <string name="down">ВНИЗ</string>
    <string name="stop">СТОП</string>
    <string name="basin_hopping">Basin Hopping</string>
    <string name="genetic_algorithm">Genetic Algorithm</string>
    <string name="x1">Верхняя граница</string>
    <string name="x2">Нижняя граница</string>
    <string name="individuals">Особи</string>
    <string name="generations">Поколения</string>
    <string name="title">Название</string>
    <string name="support">Поддержка</string>
    <string name="support_text">Приветствую тебя, пользователь!

Нечеткая логика является очень большой и сложной темой. В данном приложении собраны только необходимые разделы для понимания нечеткого управления.

Возможно, тебе не хватит представленного материала для полного понимания темы. Если возникнут какие-то вопросы, то можешь обратиться за помощью к разработчику 💜❤️
</string>
    <string name="question">Твой вопрос</string>
    <string name="send">Отправить</string>
    <string name="send_question_ok">Письмо отправлено!</string>
    <string name="iterations">Итерации</string>
    <string name="step">Шаг</string>
    <string name="info_gen">Генетический алгоритм (ГА) - это метод оптимизации, использующий идеи из эволюционной биологии и генетики для решения задач. ГА является методом, который использует случайный подход к генерации и выбору решений.

ГА работает по принципу эволюции. В начале процесса создаются случайные решения, которые называются "индивидами". Затем эти индивиды оцениваются на основе функции приспособленности, которая определяет, насколько хорошо решение работает для данной задачи. Индивиды с более высокой приспособленностью имеют больший шанс быть выбранными для будущих поколений.

В процессе генетического алгоритма, каждое новое поколение создается путем комбинирования и мутации "генетического материала" из предыдущих поколений. Этот процесс продолжается до тех пор, пока не будет получено оптимальное решение.

Применение генетического алгоритма может быть широким - это может быть задача оптимизации функций, разработки программного обеспечения, управления производственными процессами и т.д. ГА является полезным инструментом для решения сложных задач, где традиционные методы могут не дать быстрых и эффективных результатов.</string>
    <string name="info_basin">Basin hopping - это метод глобальной оптимизации, используемый для решения задач оптимизации, которые имеют сложную поверхность энергии. Он основан на атомарном уровне, и методика заключается в применении метаизучения, чтобы обойти множество физических состояний или "бассейнов" (basin) и найти глобальный минимум.

В процессе basin hopping, последовательно мутируются структуры, которые затем оцениваются на правдоподобие и степень энергии. Отсюда получаются новые структуры, которые используются уже на следующего шага алгоритма в качестве некоторого базового готовя представление. Basin hopping в отличии от традиционного применения алгоритма Монте-Карло во многих случаях находит оптимальное решение даже в условиях дизруктивного шума или условий ограниченной доступности информации о вероятности.</string>

    <string name="saved_data">Сохранено</string>
    <string name="by">Создатель: </string>
    <string name="logout_conf">Вы уверены, что хотите выйти?</string>

</resources>