<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/username_login"
                android:layout_gravity="center"
                android:hint="@string/username"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/person2"
                android:padding="8dp"
                android:background="@drawable/edit"
                android:drawablePadding="8dp"
                android:inputType="textPersonName"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/password_login"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/lock_img"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:background="@drawable/edit"/>
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:layout_marginEnd="40dp"
                android:textSize="16sp"
                android:clickable="true"
                android:layout_marginTop="8dp"
                android:gravity="right"/>

            <Button
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:text="@string/login"
                android:backgroundTint="@color/lav1"
                android:layout_gravity="center"
                android:id="@+id/login_btn"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="30dp"/>



        </LinearLayout>
    </LinearLayout>
</LinearLayout>

